--- a/package.json
+++ b/package.json
@@ -11,13 +11,12 @@
   "dependencies": {
     "@tanstack/react-query": "^4.29.7",
     "@tanstack/react-query-devtools": "^4.29.7",
-    "@vercel/analytics": "^0.1.6",
     "axios": "^1.4.0",
     "cookie": "^0.5.0",
     "formik": "^2.2.9",
     "js-cookie": "^3.0.1",
-    "next": "13.0.2",
-    "next-auth": "^4.15.1",
+    "next": "^13.4.12",
+    "next-auth": "^4.22.3",
     "next-qrcode": "^2.4.0",
     "nextjs-progressbar": "^0.0.16",
     "react": "18.2.0",
@@ -34,8 +33,8 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
-    "eslint": "8.26.0",
-    "eslint-config-next": "13.0.2",
+    "eslint": "^8.45.0",
+    "eslint-config-next": "^13.4.12",
     "postcss": "^8.4.18",
     "tailwindcss": "^3.2.1"
   }
